parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON vars_opt funcs_opt MAIN body END
Rule 2     vars_opt -> vars_list
Rule 3     vars_opt -> empty
Rule 4     vars_list -> vars
Rule 5     vars_list -> vars_list vars
Rule 6     vars -> VAR var_decl_list
Rule 7     function_list -> function
Rule 8     function_list -> function_list function
Rule 9     funcs_opt -> function_list
Rule 10    funcs_opt -> empty
Rule 11    function -> type ID DEL_PAR_OPEN param_list DEL_PAR_CLOSE LBRACKET vars_opt body RBRACKET SEMICOLON
Rule 12    param_list -> param
Rule 13    param_list -> param_list COMMA param
Rule 14    param_list -> empty
Rule 15    param -> ID COLON type
Rule 16    type -> VOID
Rule 17    type -> INT
Rule 18    type -> FLOAT
Rule 19    type -> STRING
Rule 20    type -> BOOL
Rule 21    atomic_factor -> ID
Rule 22    atomic_factor -> CONST_INT
Rule 23    atomic_factor -> CONST_FLOAT
Rule 24    atomic_factor -> CONST_STRING
Rule 25    atomic_factor -> TRUE
Rule 26    atomic_factor -> FALSE
Rule 27    atomic_factor -> DEL_PAR_OPEN expresion DEL_PAR_CLOSE
Rule 28    var_decl_list -> var_decl
Rule 29    var_decl_list -> var_decl_list var_decl
Rule 30    var_decl -> id_list COLON type SEMICOLON
Rule 31    id_list -> ID
Rule 32    id_list -> id_list COMMA ID
Rule 33    body -> LBRACE statement_list RBRACE
Rule 34    statement_list -> statement
Rule 35    statement_list -> statement_list statement
Rule 36    statement_list -> empty
Rule 37    statement -> assign
Rule 38    statement -> print_stmt
Rule 39    statement -> condition
Rule 40    statement -> cycle
Rule 41    statement -> function_call SEMICOLON
Rule 42    statement -> return_stmt
Rule 43    statement -> if_stmt
Rule 44    if_stmt -> IF DEL_PAR_OPEN expresion DEL_PAR_CLOSE body SEMICOLON
Rule 45    if_stmt -> IF DEL_PAR_OPEN expresion DEL_PAR_CLOSE body ELSE body SEMICOLON
Rule 46    return_stmt -> RETURN expresion SEMICOLON
Rule 47    return_stmt -> RETURN SEMICOLON
Rule 48    print_stmt -> PRINT DEL_PAR_OPEN print_arguments DEL_PAR_CLOSE SEMICOLON
Rule 49    print_arguments -> expresion
Rule 50    print_arguments -> print_arguments COMMA expresion
Rule 51    assign -> ID ASSIGN_OP expresion SEMICOLON
Rule 52    cycle -> DO body WHILE DEL_PAR_OPEN expresion DEL_PAR_CLOSE SEMICOLON
Rule 53    condition -> IF DEL_PAR_OPEN expresion DEL_PAR_CLOSE body else_part SEMICOLON
Rule 54    else_part -> ELSE body
Rule 55    else_part -> empty
Rule 56    exp -> termino
Rule 57    exp -> exp OP_SUMA termino
Rule 58    exp -> exp OP_RESTA termino
Rule 59    termino -> factor
Rule 60    termino -> termino OP_MULT factor
Rule 61    termino -> termino OP_DIV factor
Rule 62    factor -> DEL_PAR_OPEN expresion DEL_PAR_CLOSE
Rule 63    factor -> OP_SUMA atomic_factor
Rule 64    factor -> OP_RESTA atomic_factor
Rule 65    factor -> atomic_factor
Rule 66    function_call -> ID DEL_PAR_OPEN argument_list DEL_PAR_CLOSE
Rule 67    argument_list -> expresion
Rule 68    argument_list -> argument_list COMMA expresion
Rule 69    argument_list -> empty
Rule 70    empty -> <empty>
Rule 71    expresion -> exp
Rule 72    expresion -> exp OP_REL exp

Terminals, with rules where they appear

ASSIGN_OP            : 51
BOOL                 : 20
COLON                : 15 30
COMMA                : 13 32 50 68
CONST_FLOAT          : 23
CONST_INT            : 22
CONST_STRING         : 24
DEL_PAR_CLOSE        : 11 27 44 45 48 52 53 62 66
DEL_PAR_OPEN         : 11 27 44 45 48 52 53 62 66
DO                   : 52
ELSE                 : 45 54
END                  : 1
FALSE                : 26
FLOAT                : 18
ID                   : 1 11 15 21 31 32 51 66
IF                   : 44 45 53
INT                  : 17
LBRACE               : 33
LBRACKET             : 11
MAIN                 : 1
OP_DIV               : 61
OP_MULT              : 60
OP_REL               : 72
OP_RESTA             : 58 64
OP_SUMA              : 57 63
PRINT                : 48
PROGRAM              : 1
RBRACE               : 33
RBRACKET             : 11
RETURN               : 46 47
SEMICOLON            : 1 11 30 41 44 45 46 47 48 51 52 53
STRING               : 19
TRUE                 : 25
VAR                  : 6
VOID                 : 16
WHILE                : 52
error                : 

Nonterminals, with rules where they appear

argument_list        : 66 68
assign               : 37
atomic_factor        : 63 64 65
body                 : 1 11 44 45 45 52 53 54
condition            : 39
cycle                : 40
else_part            : 53
empty                : 3 10 14 36 55 69
exp                  : 57 58 71 72 72
expresion            : 27 44 45 46 49 50 51 52 53 62 67 68
factor               : 59 60 61
funcs_opt            : 1
function             : 7 8
function_call        : 41
function_list        : 8 9
id_list              : 30 32
if_stmt              : 43
param                : 12 13
param_list           : 11 13
print_arguments      : 48 50
print_stmt           : 38
programa             : 0
return_stmt          : 42
statement            : 34 35
statement_list       : 33 35
termino              : 56 57 58 60 61
type                 : 11 15 30
var_decl             : 28 29
var_decl_list        : 6 29
vars                 : 4 5
vars_list            : 2 5
vars_opt             : 1 11

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON vars_opt funcs_opt MAIN body END

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON vars_opt funcs_opt MAIN body END

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON vars_opt funcs_opt MAIN body END

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . vars_opt funcs_opt MAIN body END
    (2) vars_opt -> . vars_list
    (3) vars_opt -> . empty
    (4) vars_list -> . vars
    (5) vars_list -> . vars_list vars
    (70) empty -> .
    (6) vars -> . VAR var_decl_list

    VOID            reduce using rule 70 (empty -> .)
    INT             reduce using rule 70 (empty -> .)
    FLOAT           reduce using rule 70 (empty -> .)
    STRING          reduce using rule 70 (empty -> .)
    BOOL            reduce using rule 70 (empty -> .)
    MAIN            reduce using rule 70 (empty -> .)
    VAR             shift and go to state 9

    vars_opt                       shift and go to state 5
    vars_list                      shift and go to state 6
    empty                          shift and go to state 7
    vars                           shift and go to state 8

state 5

    (1) programa -> PROGRAM ID SEMICOLON vars_opt . funcs_opt MAIN body END
    (9) funcs_opt -> . function_list
    (10) funcs_opt -> . empty
    (7) function_list -> . function
    (8) function_list -> . function_list function
    (70) empty -> .
    (11) function -> . type ID DEL_PAR_OPEN param_list DEL_PAR_CLOSE LBRACKET vars_opt body RBRACKET SEMICOLON
    (16) type -> . VOID
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . STRING
    (20) type -> . BOOL

    MAIN            reduce using rule 70 (empty -> .)
    VOID            shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19

    funcs_opt                      shift and go to state 10
    function_list                  shift and go to state 11
    empty                          shift and go to state 12
    function                       shift and go to state 13
    type                           shift and go to state 14

state 6

    (2) vars_opt -> vars_list .
    (5) vars_list -> vars_list . vars
    (6) vars -> . VAR var_decl_list

    VOID            reduce using rule 2 (vars_opt -> vars_list .)
    INT             reduce using rule 2 (vars_opt -> vars_list .)
    FLOAT           reduce using rule 2 (vars_opt -> vars_list .)
    STRING          reduce using rule 2 (vars_opt -> vars_list .)
    BOOL            reduce using rule 2 (vars_opt -> vars_list .)
    MAIN            reduce using rule 2 (vars_opt -> vars_list .)
    LBRACE          reduce using rule 2 (vars_opt -> vars_list .)
    VAR             shift and go to state 9

    vars                           shift and go to state 20

state 7

    (3) vars_opt -> empty .

    VOID            reduce using rule 3 (vars_opt -> empty .)
    INT             reduce using rule 3 (vars_opt -> empty .)
    FLOAT           reduce using rule 3 (vars_opt -> empty .)
    STRING          reduce using rule 3 (vars_opt -> empty .)
    BOOL            reduce using rule 3 (vars_opt -> empty .)
    MAIN            reduce using rule 3 (vars_opt -> empty .)
    LBRACE          reduce using rule 3 (vars_opt -> empty .)


state 8

    (4) vars_list -> vars .

    VAR             reduce using rule 4 (vars_list -> vars .)
    VOID            reduce using rule 4 (vars_list -> vars .)
    INT             reduce using rule 4 (vars_list -> vars .)
    FLOAT           reduce using rule 4 (vars_list -> vars .)
    STRING          reduce using rule 4 (vars_list -> vars .)
    BOOL            reduce using rule 4 (vars_list -> vars .)
    MAIN            reduce using rule 4 (vars_list -> vars .)
    LBRACE          reduce using rule 4 (vars_list -> vars .)


state 9

    (6) vars -> VAR . var_decl_list
    (28) var_decl_list -> . var_decl
    (29) var_decl_list -> . var_decl_list var_decl
    (30) var_decl -> . id_list COLON type SEMICOLON
    (31) id_list -> . ID
    (32) id_list -> . id_list COMMA ID

    ID              shift and go to state 24

    var_decl_list                  shift and go to state 21
    var_decl                       shift and go to state 22
    id_list                        shift and go to state 23

state 10

    (1) programa -> PROGRAM ID SEMICOLON vars_opt funcs_opt . MAIN body END

    MAIN            shift and go to state 25


state 11

    (9) funcs_opt -> function_list .
    (8) function_list -> function_list . function
    (11) function -> . type ID DEL_PAR_OPEN param_list DEL_PAR_CLOSE LBRACKET vars_opt body RBRACKET SEMICOLON
    (16) type -> . VOID
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . STRING
    (20) type -> . BOOL

    MAIN            reduce using rule 9 (funcs_opt -> function_list .)
    VOID            shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19

    function                       shift and go to state 26
    type                           shift and go to state 14

state 12

    (10) funcs_opt -> empty .

    MAIN            reduce using rule 10 (funcs_opt -> empty .)


state 13

    (7) function_list -> function .

    VOID            reduce using rule 7 (function_list -> function .)
    INT             reduce using rule 7 (function_list -> function .)
    FLOAT           reduce using rule 7 (function_list -> function .)
    STRING          reduce using rule 7 (function_list -> function .)
    BOOL            reduce using rule 7 (function_list -> function .)
    MAIN            reduce using rule 7 (function_list -> function .)


state 14

    (11) function -> type . ID DEL_PAR_OPEN param_list DEL_PAR_CLOSE LBRACKET vars_opt body RBRACKET SEMICOLON

    ID              shift and go to state 27


state 15

    (16) type -> VOID .

    ID              reduce using rule 16 (type -> VOID .)
    SEMICOLON       reduce using rule 16 (type -> VOID .)
    DEL_PAR_CLOSE   reduce using rule 16 (type -> VOID .)
    COMMA           reduce using rule 16 (type -> VOID .)


state 16

    (17) type -> INT .

    ID              reduce using rule 17 (type -> INT .)
    SEMICOLON       reduce using rule 17 (type -> INT .)
    DEL_PAR_CLOSE   reduce using rule 17 (type -> INT .)
    COMMA           reduce using rule 17 (type -> INT .)


state 17

    (18) type -> FLOAT .

    ID              reduce using rule 18 (type -> FLOAT .)
    SEMICOLON       reduce using rule 18 (type -> FLOAT .)
    DEL_PAR_CLOSE   reduce using rule 18 (type -> FLOAT .)
    COMMA           reduce using rule 18 (type -> FLOAT .)


state 18

    (19) type -> STRING .

    ID              reduce using rule 19 (type -> STRING .)
    SEMICOLON       reduce using rule 19 (type -> STRING .)
    DEL_PAR_CLOSE   reduce using rule 19 (type -> STRING .)
    COMMA           reduce using rule 19 (type -> STRING .)


state 19

    (20) type -> BOOL .

    ID              reduce using rule 20 (type -> BOOL .)
    SEMICOLON       reduce using rule 20 (type -> BOOL .)
    DEL_PAR_CLOSE   reduce using rule 20 (type -> BOOL .)
    COMMA           reduce using rule 20 (type -> BOOL .)


state 20

    (5) vars_list -> vars_list vars .

    VAR             reduce using rule 5 (vars_list -> vars_list vars .)
    VOID            reduce using rule 5 (vars_list -> vars_list vars .)
    INT             reduce using rule 5 (vars_list -> vars_list vars .)
    FLOAT           reduce using rule 5 (vars_list -> vars_list vars .)
    STRING          reduce using rule 5 (vars_list -> vars_list vars .)
    BOOL            reduce using rule 5 (vars_list -> vars_list vars .)
    MAIN            reduce using rule 5 (vars_list -> vars_list vars .)
    LBRACE          reduce using rule 5 (vars_list -> vars_list vars .)


state 21

    (6) vars -> VAR var_decl_list .
    (29) var_decl_list -> var_decl_list . var_decl
    (30) var_decl -> . id_list COLON type SEMICOLON
    (31) id_list -> . ID
    (32) id_list -> . id_list COMMA ID

    VAR             reduce using rule 6 (vars -> VAR var_decl_list .)
    VOID            reduce using rule 6 (vars -> VAR var_decl_list .)
    INT             reduce using rule 6 (vars -> VAR var_decl_list .)
    FLOAT           reduce using rule 6 (vars -> VAR var_decl_list .)
    STRING          reduce using rule 6 (vars -> VAR var_decl_list .)
    BOOL            reduce using rule 6 (vars -> VAR var_decl_list .)
    MAIN            reduce using rule 6 (vars -> VAR var_decl_list .)
    LBRACE          reduce using rule 6 (vars -> VAR var_decl_list .)
    ID              shift and go to state 24

    var_decl                       shift and go to state 28
    id_list                        shift and go to state 23

state 22

    (28) var_decl_list -> var_decl .

    ID              reduce using rule 28 (var_decl_list -> var_decl .)
    VAR             reduce using rule 28 (var_decl_list -> var_decl .)
    VOID            reduce using rule 28 (var_decl_list -> var_decl .)
    INT             reduce using rule 28 (var_decl_list -> var_decl .)
    FLOAT           reduce using rule 28 (var_decl_list -> var_decl .)
    STRING          reduce using rule 28 (var_decl_list -> var_decl .)
    BOOL            reduce using rule 28 (var_decl_list -> var_decl .)
    MAIN            reduce using rule 28 (var_decl_list -> var_decl .)
    LBRACE          reduce using rule 28 (var_decl_list -> var_decl .)


state 23

    (30) var_decl -> id_list . COLON type SEMICOLON
    (32) id_list -> id_list . COMMA ID

    COLON           shift and go to state 29
    COMMA           shift and go to state 30


state 24

    (31) id_list -> ID .

    COLON           reduce using rule 31 (id_list -> ID .)
    COMMA           reduce using rule 31 (id_list -> ID .)


state 25

    (1) programa -> PROGRAM ID SEMICOLON vars_opt funcs_opt MAIN . body END
    (33) body -> . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 32

    body                           shift and go to state 31

state 26

    (8) function_list -> function_list function .

    VOID            reduce using rule 8 (function_list -> function_list function .)
    INT             reduce using rule 8 (function_list -> function_list function .)
    FLOAT           reduce using rule 8 (function_list -> function_list function .)
    STRING          reduce using rule 8 (function_list -> function_list function .)
    BOOL            reduce using rule 8 (function_list -> function_list function .)
    MAIN            reduce using rule 8 (function_list -> function_list function .)


state 27

    (11) function -> type ID . DEL_PAR_OPEN param_list DEL_PAR_CLOSE LBRACKET vars_opt body RBRACKET SEMICOLON

    DEL_PAR_OPEN    shift and go to state 33


state 28

    (29) var_decl_list -> var_decl_list var_decl .

    ID              reduce using rule 29 (var_decl_list -> var_decl_list var_decl .)
    VAR             reduce using rule 29 (var_decl_list -> var_decl_list var_decl .)
    VOID            reduce using rule 29 (var_decl_list -> var_decl_list var_decl .)
    INT             reduce using rule 29 (var_decl_list -> var_decl_list var_decl .)
    FLOAT           reduce using rule 29 (var_decl_list -> var_decl_list var_decl .)
    STRING          reduce using rule 29 (var_decl_list -> var_decl_list var_decl .)
    BOOL            reduce using rule 29 (var_decl_list -> var_decl_list var_decl .)
    MAIN            reduce using rule 29 (var_decl_list -> var_decl_list var_decl .)
    LBRACE          reduce using rule 29 (var_decl_list -> var_decl_list var_decl .)


state 29

    (30) var_decl -> id_list COLON . type SEMICOLON
    (16) type -> . VOID
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . STRING
    (20) type -> . BOOL

    VOID            shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19

    type                           shift and go to state 34

state 30

    (32) id_list -> id_list COMMA . ID

    ID              shift and go to state 35


state 31

    (1) programa -> PROGRAM ID SEMICOLON vars_opt funcs_opt MAIN body . END

    END             shift and go to state 36


state 32

    (33) body -> LBRACE . statement_list RBRACE
    (34) statement_list -> . statement
    (35) statement_list -> . statement_list statement
    (36) statement_list -> . empty
    (37) statement -> . assign
    (38) statement -> . print_stmt
    (39) statement -> . condition
    (40) statement -> . cycle
    (41) statement -> . function_call SEMICOLON
    (42) statement -> . return_stmt
    (43) statement -> . if_stmt
    (70) empty -> .
    (51) assign -> . ID ASSIGN_OP expresion SEMICOLON
    (48) print_stmt -> . PRINT DEL_PAR_OPEN print_arguments DEL_PAR_CLOSE SEMICOLON
    (53) condition -> . IF DEL_PAR_OPEN expresion DEL_PAR_CLOSE body else_part SEMICOLON
    (52) cycle -> . DO body WHILE DEL_PAR_OPEN expresion DEL_PAR_CLOSE SEMICOLON
    (66) function_call -> . ID DEL_PAR_OPEN argument_list DEL_PAR_CLOSE
    (46) return_stmt -> . RETURN expresion SEMICOLON
    (47) return_stmt -> . RETURN SEMICOLON
    (44) if_stmt -> . IF DEL_PAR_OPEN expresion DEL_PAR_CLOSE body SEMICOLON
    (45) if_stmt -> . IF DEL_PAR_OPEN expresion DEL_PAR_CLOSE body ELSE body SEMICOLON

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    RBRACE          reduce using rule 70 (empty -> .)
    ID              shift and go to state 47
    PRINT           shift and go to state 48
    IF              shift and go to state 49
    DO              shift and go to state 50
    RETURN          shift and go to state 51

  ! ID              [ reduce using rule 70 (empty -> .) ]
  ! PRINT           [ reduce using rule 70 (empty -> .) ]
  ! IF              [ reduce using rule 70 (empty -> .) ]
  ! DO              [ reduce using rule 70 (empty -> .) ]
  ! RETURN          [ reduce using rule 70 (empty -> .) ]

    statement_list                 shift and go to state 37
    statement                      shift and go to state 38
    empty                          shift and go to state 39
    assign                         shift and go to state 40
    print_stmt                     shift and go to state 41
    condition                      shift and go to state 42
    cycle                          shift and go to state 43
    function_call                  shift and go to state 44
    return_stmt                    shift and go to state 45
    if_stmt                        shift and go to state 46

state 33

    (11) function -> type ID DEL_PAR_OPEN . param_list DEL_PAR_CLOSE LBRACKET vars_opt body RBRACKET SEMICOLON
    (12) param_list -> . param
    (13) param_list -> . param_list COMMA param
    (14) param_list -> . empty
    (15) param -> . ID COLON type
    (70) empty -> .

    ID              shift and go to state 52
    DEL_PAR_CLOSE   reduce using rule 70 (empty -> .)
    COMMA           reduce using rule 70 (empty -> .)

    param_list                     shift and go to state 53
    param                          shift and go to state 54
    empty                          shift and go to state 55

state 34

    (30) var_decl -> id_list COLON type . SEMICOLON

    SEMICOLON       shift and go to state 56


state 35

    (32) id_list -> id_list COMMA ID .

    COLON           reduce using rule 32 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 32 (id_list -> id_list COMMA ID .)


state 36

    (1) programa -> PROGRAM ID SEMICOLON vars_opt funcs_opt MAIN body END .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON vars_opt funcs_opt MAIN body END .)


state 37

    (33) body -> LBRACE statement_list . RBRACE
    (35) statement_list -> statement_list . statement
    (37) statement -> . assign
    (38) statement -> . print_stmt
    (39) statement -> . condition
    (40) statement -> . cycle
    (41) statement -> . function_call SEMICOLON
    (42) statement -> . return_stmt
    (43) statement -> . if_stmt
    (51) assign -> . ID ASSIGN_OP expresion SEMICOLON
    (48) print_stmt -> . PRINT DEL_PAR_OPEN print_arguments DEL_PAR_CLOSE SEMICOLON
    (53) condition -> . IF DEL_PAR_OPEN expresion DEL_PAR_CLOSE body else_part SEMICOLON
    (52) cycle -> . DO body WHILE DEL_PAR_OPEN expresion DEL_PAR_CLOSE SEMICOLON
    (66) function_call -> . ID DEL_PAR_OPEN argument_list DEL_PAR_CLOSE
    (46) return_stmt -> . RETURN expresion SEMICOLON
    (47) return_stmt -> . RETURN SEMICOLON
    (44) if_stmt -> . IF DEL_PAR_OPEN expresion DEL_PAR_CLOSE body SEMICOLON
    (45) if_stmt -> . IF DEL_PAR_OPEN expresion DEL_PAR_CLOSE body ELSE body SEMICOLON

    RBRACE          shift and go to state 57
    ID              shift and go to state 47
    PRINT           shift and go to state 48
    IF              shift and go to state 49
    DO              shift and go to state 50
    RETURN          shift and go to state 51

    statement                      shift and go to state 58
    assign                         shift and go to state 40
    print_stmt                     shift and go to state 41
    condition                      shift and go to state 42
    cycle                          shift and go to state 43
    function_call                  shift and go to state 44
    return_stmt                    shift and go to state 45
    if_stmt                        shift and go to state 46

state 38

    (34) statement_list -> statement .

    RBRACE          reduce using rule 34 (statement_list -> statement .)
    ID              reduce using rule 34 (statement_list -> statement .)
    PRINT           reduce using rule 34 (statement_list -> statement .)
    IF              reduce using rule 34 (statement_list -> statement .)
    DO              reduce using rule 34 (statement_list -> statement .)
    RETURN          reduce using rule 34 (statement_list -> statement .)


state 39

    (36) statement_list -> empty .

    RBRACE          reduce using rule 36 (statement_list -> empty .)
    ID              reduce using rule 36 (statement_list -> empty .)
    PRINT           reduce using rule 36 (statement_list -> empty .)
    IF              reduce using rule 36 (statement_list -> empty .)
    DO              reduce using rule 36 (statement_list -> empty .)
    RETURN          reduce using rule 36 (statement_list -> empty .)


state 40

    (37) statement -> assign .

    RBRACE          reduce using rule 37 (statement -> assign .)
    ID              reduce using rule 37 (statement -> assign .)
    PRINT           reduce using rule 37 (statement -> assign .)
    IF              reduce using rule 37 (statement -> assign .)
    DO              reduce using rule 37 (statement -> assign .)
    RETURN          reduce using rule 37 (statement -> assign .)


state 41

    (38) statement -> print_stmt .

    RBRACE          reduce using rule 38 (statement -> print_stmt .)
    ID              reduce using rule 38 (statement -> print_stmt .)
    PRINT           reduce using rule 38 (statement -> print_stmt .)
    IF              reduce using rule 38 (statement -> print_stmt .)
    DO              reduce using rule 38 (statement -> print_stmt .)
    RETURN          reduce using rule 38 (statement -> print_stmt .)


state 42

    (39) statement -> condition .

    RBRACE          reduce using rule 39 (statement -> condition .)
    ID              reduce using rule 39 (statement -> condition .)
    PRINT           reduce using rule 39 (statement -> condition .)
    IF              reduce using rule 39 (statement -> condition .)
    DO              reduce using rule 39 (statement -> condition .)
    RETURN          reduce using rule 39 (statement -> condition .)


state 43

    (40) statement -> cycle .

    RBRACE          reduce using rule 40 (statement -> cycle .)
    ID              reduce using rule 40 (statement -> cycle .)
    PRINT           reduce using rule 40 (statement -> cycle .)
    IF              reduce using rule 40 (statement -> cycle .)
    DO              reduce using rule 40 (statement -> cycle .)
    RETURN          reduce using rule 40 (statement -> cycle .)


state 44

    (41) statement -> function_call . SEMICOLON

    SEMICOLON       shift and go to state 59


state 45

    (42) statement -> return_stmt .
